--- a/client/src/components/Card/style.module.css
+++ b/client/src/components/Card/style.module.css
@@ -5,15 +5,20 @@
 	width: fit-content;
 	height: fit-content;
 	margin: 4px;
+	text-shadow: black 1px 1px 2px;
 }
 .component img {
 	border-radius: 0.5em;
 }
-.component p {
+.title {
 	position: absolute;
 	top: 0;
 	z-index: 1;
-	background-color: #0000;
+}
+.genres {
+	position: absolute;
+	bottom: 0;
+	z-index: 1;
 }
 .component:hover {
 	cursor: pointer;
