--- a/client/src/components/Card/style.module.css
+++ b/client/src/components/Card/style.module.css
@@ -2,12 +2,10 @@
 	position: relative;
 	display: flex;
 	justify-content: center;
-	width: fit-content;
-	height: fit-content;
+	width: 360px;
+	height: 200px;
 	margin: 4px;
 	text-shadow: black 1px 1px 2px;
-}
-.component img {
 	border-radius: 0.5em;
 }
 .title {
