--- a/client/src/styles/App.css
+++ b/client/src/styles/App.css
@@ -34,7 +34,7 @@
 	background-color: #8884;
 	border: none;
 	border-radius: 0.7em;
-	padding: 0.4em;
+	padding: 0.4em 1em;
 	margin: 4px;
 	transition: all .25s cubic-bezier(.22,.61,.36,1);
 	box-shadow: 1px 1px 10px 0px #0028;
