--- a/client/src/components/Card/style.module.css
+++ b/client/src/components/Card/style.module.css
@@ -12,13 +12,24 @@
 .title {
 	position: absolute;
 	top: 0;
-	z-index: 1;
+	z-index: 2;
 }
-.genres {
-	position: absolute;
-	bottom: 0;
+.info {
+	display: flex;
+	flex-direction: column;
+	justify-content: flex-end;
 	z-index: 1;
+	font-size: 1.5em;
+	background-color: #0008;
+	width: 100%;
+	height: 100%;
+	opacity: 0%;
+	border-radius: inherit;
+}
+.info:hover {
+	opacity: 100%;
 }
 .component:hover {
 	cursor: pointer;
+	background-opacity: 50%;
 }
