--- a/client/src/components/Card/style.module.css
+++ b/client/src/components/Card/style.module.css
@@ -4,7 +4,7 @@
 	justify-content: center;
 	width: 360px;
 	height: 200px;
-	margin: 4px;
+	margin: 8px;
 	text-shadow: black 1px 1px 2px;
 	border-radius: 0.5em;
 	background-image: url('../../res/img/game_default.png');
@@ -20,10 +20,11 @@
 	justify-content: flex-end;
 	z-index: 1;
 	font-size: 1.5em;
-	background-color: #0008;
+	background-color: #000A;
 	width: 100%;
-	height: 100%;
+	bottom: 0;
 	opacity: 0%;
+	height: 100%;
 	border-radius: inherit;
 }
 .info:hover {
@@ -31,5 +32,4 @@
 }
 .component:hover {
 	cursor: pointer;
-	background-opacity: 50%;
 }
