--- a/client/src/components/Filter/style.module.css
+++ b/client/src/components/Filter/style.module.css
@@ -1,3 +1,23 @@
 .component {
-
+	display: flex;
+	align-items: center;
+}
+.component img {
+	margin-left: 10px;
+}
+.leftBtn {
+	border-radius: 0.7em 0 0 0.7em !important;
+	box-shadow: 2px 2px 4px 0px #0028 !important;
+}
+.leftBtn:disabled {
+	border-radius: 0.7em 0 0 0.7em !important;
+	box-shadow: none !important;
+}
+.rightBtn {
+	border-radius: 0 0.7em 0.7em 0 !important;
+	box-shadow: 2px 2px 4px 0px #0028 !important;
+}
+.rightBtn:disabled {
+	border-radius: 0 0.7em 0.7em 0 !important;
+	box-shadow: none !important;
 }
