Front: Pre Submit-Refactor

--- a/client/src/components/Details/style.module.css
+++ b/client/src/components/Details/style.module.css
@@ -11,6 +11,9 @@
 	text-align: center;
 	min-width: 50%;
 }
+.component p {
+	word-wrap: break-word;
+}
 .imgContainer {
 	height: calc(100vh - 75px - 3em);
 }
