--- a/client/src/components/Form/style.module.css
+++ b/client/src/components/Form/style.module.css
@@ -1,12 +1,11 @@
-/* No me la */
-.container {
-	
-}
 .component {
 	display: flex;
 	flex-direction: column;
 	flex-wrap: wrap;
 	padding-bottom: 150px;
+}
+.component h2 {
+	margin: 10px;
 }
 .component button {
 	width: fit-content;
@@ -14,6 +13,20 @@
 }
 .component textarea {
 	min-width: 300px;
+}
+.half1 {
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	flex-wrap: wrap;
+	width: 50%;
+}
+.half2 {
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	flex-wrap: wrap;
+	width: 50%;
 }
 .inputNorm {
 	min-width: 300px;
@@ -24,7 +37,6 @@
 	flex-direction: row;
 	justify-content: center;
 	padding: 10px 10px;
-	border-bottom: 1px solid #0004;
 }
 .checkCont {
 	display: flex;
