--- a/client/src/components/Search/style.module.css
+++ b/client/src/components/Search/style.module.css
@@ -1,6 +1,16 @@
 .component {
-
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	min-width: 280px;
+}
+.component button {
+	border-radius: 0 0.7em 0.7em 0 !important;
+	box-shadow: 2px 2px 4px 0px #0028 !important;
+	margin-left: 1px !important;
 }
 .search {
 	box-shadow: 3px 3px 10px 0px #1128 inset;
+	border-radius: 0.7em 0 0 0.7em !important;
+	margin-right: 1px;
 }
