--- a/client/src/components/Form/style.module.css
+++ b/client/src/components/Form/style.module.css
@@ -9,33 +9,54 @@
 }
 .component button {
 	width: fit-content;
-	align-self: center;
 }
 .component textarea {
 	min-width: 300px;
+	width: 85%;
+	font-size: 14px;
+}
+.twoHalves {
+	display: flex;
+	flex-wrap: wrap;
 }
 .half1 {
 	display: flex;
 	flex-direction: column;
-	justify-content: center;
+	justify-content: flex-start;
+	align-items: center;
 	flex-wrap: wrap;
 	width: 50%;
+	min-width: 360px;
 }
 .half2 {
 	display: flex;
 	flex-direction: column;
-	justify-content: center;
+	justify-content: flex-start;
+	align-items: center;
 	flex-wrap: wrap;
 	width: 50%;
+	min-width: 360px;
+}
+.rateDate {
+	display: flex;
+	justify-content: center;
+	flex-wrap: wrap;
+}
+.date {
+	width: fit-content;
 }
 .inputNorm {
-	min-width: 300px;
+	display: flex;
+	justify-content: center;
+	min-width: 100px;
+	width: 85%;
 	box-shadow: 3px 3px 10px 0px #1128 inset;
 }
 .inputCont {
 	display: flex;
-	flex-direction: row;
+	flex-direction: column;
 	justify-content: center;
+	align-items: center;
 	padding: 10px 10px;
 }
 .imgPreview {
@@ -43,23 +64,38 @@
 }
 .tagsField {
 	display: flex;
+	justify-content: flex-start;
+	align-items: flex-start;
+	align-content: flex-start;
 	flex-wrap: wrap;
 	min-width: 300px;
+	min-height: 200px;
+	width: 85%;
 	box-shadow: 3px 3px 10px 0px #1128 inset;
 	border-radius: .7em;
 	background-color: #8886
 }
 .tagsField select {
+	font-size: 14px;
+	padding: 0.4em 1em;
+	margin: 4px;
+	width: fit-content;
+	height: fit-content;
 	border-radius: .7em;
 	background-color: #77A6
+}
+.tagsField select:hover {
+	background-color: #99b8
 }
 .error {
 	color: #f44;
 	text-shadow: 1px 1px 10px #822a;
 }
 .inputError {
-	/*box-shadow: x y blur spread color inset*/
 	min-width: 300px;
+	width: 85%;
 	box-shadow: 3px 3px 10px 0px #5118 inset;
-	/*box-shadow: 1px 1px 9px 0px #f44A ;*/
+}
+.submit {
+	align-self: center;
 }
