--- a/client/src/components/Home/style.module.css
+++ b/client/src/components/Home/style.module.css
@@ -14,5 +14,12 @@
 
 .component button {
 	font-size: 2em;
+	background-color: #A5A8;
 	width: fit-content;
+}
+.component button:enabled:hover {
+	background-color: #D8D8;
+}
+.component button:enabled:active {
+	background-color: #858A !important;
 }
