--- a/client/src/components/Form/style.module.css
+++ b/client/src/components/Form/style.module.css
@@ -15,6 +15,9 @@
 	width: 85%;
 	font-size: 14px;
 }
+.component label {
+	margin-top: 10px;
+}
 .twoHalves {
 	display: flex;
 	justify-content:center;
